<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_name"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/sort_by_date" />
            <item
                android:id="@+id/action_sort_size"
                android:title="@string/sort_by_size" />
            <item
                android:id="@+id/action_sort_duration"
                android:title="@string/sort_by_duration" />
        </menu>
    </item>

    <item
        android:id="@+id/action_network_stream"
        android:title="@string/action_network_stream"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
